<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/root_layout"
    android:background="@android:color/darker_gray"
    android:orientation="vertical">
    <LinearLayout
        android:id="@+id/child1_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:id="@+id/textview1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@android:color/holo_purple"
            android:text="@string/text1_name"
            android:textSize="@dimen/text_font_size"
            android:gravity="center"/>
        <TextView
            android:id="@+id/textview2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@android:color/holo_red_dark"
            android:text="@string/text2_name"
            android:gravity="center"
            android:textSize="@dimen/text_font_size"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/child2_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:id="@+id/textview3"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/text3_name"
            android:layout_weight="1"
            android:gravity="center"
            android:background="@android:color/holo_green_light"
            android:textSize="@dimen/text_font_size"/>
        <TextView
            android:id="@+id/textview4"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:background="@android:color/holo_blue_bright"
            android:text="@string/text4_name"
            android:textSize="@dimen/text_font_size"/>
    </LinearLayout>

</LinearLayout>
